# ipSlicer

./: CMakeLists.txt  README.md  main.cpp
